<resources>
    <string name="app_name">Facebook</string>
    <string name="username">Enter Email or User name</string>
    <string name="password">Enter Password</string>
    <string name="log_in">Log in</string>
    <string name="repeatepass">Repeate Password</string>
    <string name="register">REGISTER</string>
    <string name="not_register">Not Register?</string>
    <string name="already_register">Already Register</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome To Facebook</string>
    <string name="nav_header_subtitle">fredrek9719@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
